# Razen-Lang

./: .coverage  .gitattributes  .gitignore  =13.7.0  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README-EXTENSIONS.md  README.md  autogen_variables.py  fixed_self_compile.rzn  followers.py  install-mac.sh  install.ps1  install.sh  installer.sh  main.py  parser_parsetab.pickle  prompt.txt  razen_parsetab_interp.pickle  requirements.txt  scripts.py  test.rzn  test_bracket_notation.rzn  test_script.rzn  version
changelogs/: beta_v0.1.695.adoc  beta_v0.1.695.md  beta_v0.1.695.mdx  beta_v0.1.69_api.adoc  beta_v0.1.69_api.md  beta_v0.1.69_api.mdx  beta_v0.1.75.md  beta_v0.1.76.md  changelogs.mdx  installtion.md  v0.1.66.md  v0.1.66_tokens.md  v0.1.685.md
docs/: README.md
docs/api/: README.md
docs/examples/: README.md  control_flow.rzn  functions.rzn  hello_world.rzn  variables.rzn
docs/getting-started/: README.md
docs/language-reference/: README.md
docs/tutorials/: README.md
examples/: 12-16.rzn  all_libraries_demo.rzn  api_documentation.rzn  api_example.rzn  api_operations.rzn  basic_test.rzn  binary_test.rzn  binarylib_test_v2.rzn  bitwiselib_test_v2.rzn  boolen_condtions.rzn  bracket_test.rzn  color_test.rzn  compiler_construction_advanced.rzn  compiler_construction_test.rzn  compiler_lib_test.rzn  compiler_tokens_test.rzn  compilerlib_test_v2.rzn  correct_variables.rzn  enhanced_bracket_test.rzn  enum_array_access.rzn  enum_bracket_test.rzn  enum_debug.rzn  enum_var_test.rzn  example.rzn  filesystem_demo.rzn  filesystem_demo_corrected.rzn  filesystem_simple_demo.rzn  fixed_self_compile.rzn  fun.rzn  function_debug.rzn  function_return_test.rzn  function_test.rzn  functions.rzn  functions_advance.rzn  guess.rzn  hello.rzn  import_methods.rzn  incorrect_variables.rzn  language_server_test.rzn  lib_bracket_test.rzn  (+52 more)
examples/daily-codes/: daily2.rzn  daily4.rzn  tutorial1.rzn
examples/web-example/: index.html  script.rzn  style.css
examples/weekly-codes/: weekly.rzn
future/: array_and_nested_structures.rzn  bot.rzn  error_handling_improvements.md  file.rzn  import_method.rzn  improved_tokens.rzn  main.rzn
html_razen_tests/: test.html.rzn  todo_app.html.rzn
planning/: Class Implementation proposal.md  README.md  V3-Reactive-Proposal.md  class-implementation-proposal.md  mock-v3-code-example.rzn  razen-import-alias-proposal.md
planning/reflex/: reflex-proposal.md  tree_simulation.rzn
properties/: api.rzn  conditionals.rzn  developer_experience.rzn  error_handling.rzn  functions.rzn  functions_fixed.rzn  import_method.rzn  loops.rzn  modules.rzn  scripting.rzn  standard_library.rzn  syntax.rzn  usage.rzn  variables.rzn
properties/functions/: array.rzn  box.rzn  input_output.rzn  math.rzn  numbers.rzn  objects.rzn  references.rzn  storage.rzn  string.rzn  time.rzn  type_checking.rzn  type_conversion.rzn
properties/libs/: array.rzn  arrlib.rzn  audio.rzn  box.rzn  color.rzn  crypto.rzn  date.rzn  file.rzn  ht.rzn  image.rzn  input_output.rzn  json.rzn  log.rzn  math.rzn  mathlib.rzn  net.rzn  numbers.rzn  os.rzn  random.rzn  references.rzn  regex.rzn  storage.rzn  string.rzn  strlib.rzn  system.rzn  time.rzn  timelib.rzn  type_checking.rzn  type_conversion.rzn  uuid.rzn  validation.rzn
properties/web-properties/: README.md  syntax.rzn  variables.rzn
razen-c/: razen_compiler
razen-jetbrains-plugin/: README.md  build.gradle.kts  settings.gradle.kts
razen-tests/: all_libraries_demo.rzn  api_documentation.rzn  api_operations.rzn  binarylib_test_v2.rzn  compilerlib_test_v2.rzn  correct_variables.rzn  demo_lib.rzn  enum_array_access.rzn  enum_bracket_test.rzn  filesystem_simple_demo.rzn  fixed_self_compile.rzn  ft.rzn  fun.rzn  function_debug.rzn  import_methods.rzn  language_server_test.rzn  lib_bracket_test.rzn  library_demo.rzn  library_test.rzn  library_test_namespace.rzn  loglib_test_v2.rzn  memory_lib_test.rzn  memory_simple_test.rzn  memory_test.rzn  memorylib_test_fixed.rzn  mixed_test.rzn  nested_values_demo.rzn  nested_values_simple.rzn  nested_values_test.rzn  order.rzn  performacce.rzn  processlib_test_v2.rzn  quiz.rzn  random_bracket_test.rzn  self_compile_comprehensive_test.rzn  self_compile_phase1.rzn  self_compile_phase2_lexer.rzn  self_compile_simple.rzn  simple_lib_test.rzn  simple_memory_test.rzn  (+9 more)
razen-vscode-extension/: CHANGELOG.md  README.md  package-lock.json  package.json
razen-zed-extension/: CHANGELOG.md  Cargo.toml  LICENSE  README.md  extension.toml  install.sh  test.rzn
razen-zed-extension/languages/razen/: brackets.scm  config.toml  folds.scm  highlights.scm  indents.scm  injections.scm  language_servers.toml  outline.scm  redactions.scm  runnable.scm  runnables.toml  textobjects.scm
razen-zed-extension/src/: lib.rs  lib_old.rs
razen-zed-extension/themes/: razen-dark.json
razen_tests/: advanced_features.rzn  cli_tool.rzn  function_examples.rzn  function_return_test.rzn  function_test.rzn  math_debug.rzn  math_functions_test.rzn  math_utils.rzn  module_test.rzn  nested_interp_test.rzn  purchase.rzn  simple_functions.rzn  test1.rzn  test_case_40.rzn
scripts/: razen  razen-autogen  razen-create  razen-debug  razen-docs  razen-extension  razen-help  razen-run  razen-run-debug  razen-test  razen-update
src/: __init__.py  ast.rs  compiler.rs  error.txt  functions.rs  interpreter.py  lexer.py  lexer.rs  library.rs  llvm.rs  main.rs  parser.py  parser.rs  razen_parsetab.py  runtime.py  token.rs  value.rs  web_compiler.rs  web_parser.rs
test/: test1.rzn
test_dir/: test.json
tests/: debug_lexer.py  debug_parser.py  minimal_test.rzn  simple_test.rzn  test_basic.rzn  test_ref.rzn  test_script.rzn  test_simple_parser.rzn  ultra_minimal.rzn
web_tests/: web.rzn
(+57 files in other folders)
