[package]
name = "razen_compiler"
version = "0.1.0"
edition = "2021"

[dependencies]
# For machine code generation
cranelift = "0.104"
cranelift-module = "0.104"
cranelift-jit = "0.104"      # For potentially running code directly (optional, good for testing)
cranelift-object = "0.104" # For writing object files
target-lexicon = "0.12"     # For defining target architecture

# For linking object files (simplest way)
cc = "1.0"

# Error handling helper
thiserror = "1.0"

# For library system
rand = "0.8"
rand_chacha = "0.3"
lazy_static = "1.4"
chrono = "0.4"
serde_json = "1.0"

# For crypto library
sha2 = "0.10"
base64 = "0.21"
aes-gcm = "0.10"
hkdf = "0.12"

# For regex library
regex = "1.9"

# For UUID library
uuid = { version = "1.4", features = ["v4", "serde"] }

# For networking and HTTP requests
curl = "0.4.44"
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }

# For logging
log = "0.4"
env_logger = "0.10"

# Potentially for parsing syntax.rzn later (not used in this initial impl)
# toml = "0.8"