[package]
name = "razen_compiler"
version = "0.1.0"
edition = "2021"

[dependencies]
# For machine code generation (Cranelift dependencies removed)

# For linking object files (simplest way)
cc = "1.0"

# For LLVM-based code generation backend
# IMPORTANT: Requires a compatible version of LLVM development libraries to be installed on the system.
# See Inkwell documentation for compatible LLVM versions (e.g., LLVM 14, 15, 16, etc.).
inkwell = { version = "0.2.0", features = ["llvm15-0"] } # Example, adjust LLVM feature as needed

# Error handling helper
thiserror = "1.0"

# For library system
rand = "0.8"
rand_chacha = "0.3"
lazy_static = "1.4"
chrono = "0.4"
serde_json = "1.0"

# For crypto library
sha2 = "0.10"
base64 = "0.21"
aes-gcm = "0.10"
hkdf = "0.12"

# For regex library
regex = "1.9"

# For UUID library
uuid = { version = "1.4", features = ["v4", "serde"] }

# For enum support
strum = "0.25"
strum_macros = "0.25"

# For networking and HTTP requests
curl = "0.4.44"
reqwest = { version = "0.11", features = ["blocking", "json", "cookies", "multipart"] }
tokio = { version = "1", features = ["full"] }
url = "2.4"
form_urlencoded = "1.2"

# For logging
log = "0.4"
env_logger = "0.10"

# For threading support
num_cpus = "1.16"

# For memory management
libc = "0.2"
memmap2 = "0.5.10"  # For memory-mapped file operations
bytes = "1.4.0"    # For efficient byte buffer handling
parking_lot = "0.12.1"  # For more efficient mutex implementations

# Potentially for parsing syntax.rzn later (not used in this initial impl)
# toml = "0.8"

# For compiler construction framework
pest = "2.7"         # Parser generator library
pest_derive = "2.7"  # Procedural macros for pest
lalrpop = "0.20"     # Parser generator framework
serde = { version = "1.0", features = ["derive"] } # For serialization/deserialization
proc-macro2 = "1.0"  # For procedural macros
syn = { version = "2.0", features = ["full", "extra-traits"] } # For syntax parsing
quote = "1.0"        # For code generation